# sopes1-201900285-p2

./: .gitignore  README.md
TweetsClima/: .env
TweetsClima/analyzer/: go.mod  main.go
TweetsClima/go-entry/: go.mod  main.go
TweetsClima/go-entry/client-test/: main.go
TweetsClima/go-entry/github.com/SaulCerezo/TweetsClima/go-entry/proto/: weather.pb.go  weather_grpc.pb.go
TweetsClima/go-entry/proto/: weather.proto
TweetsClima/k8s/: analyzer-deployment.yaml  analyzer-service.yaml  go-entry-deployment.yaml  go-entry-service.yaml  ingress.yaml  rabbitmq-deployment.yaml  rust-api-deployment.yaml  rust-api-service.yaml
TweetsClima/rust-api/: Cargo.toml  build.rs
TweetsClima/rust-api/src/: main.rs
TweetsClima/rust-test-locust/: locustfile.py
