[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15" 

# 🔽 Dependencias para gRPC
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"
